# VonNeumannProbe_inGalaxy_Simulator

./: .gitignore  .gitmodules  Cargo.toml  TO DO LIST.txt  VonNeumannProbe_inGalaxy_Simulator.sln  VonNeumannProbe_inGalaxy_Simulator.slnx
NpgsCore/: .editorconfig  NpgsCore.vcxproj  NpgsCore.vcxproj.filters  Output.csv  vcpkg.json
NpgsCore/Assets/Shaders/: Advanced.frag  Advanced.geom  (+11 more)
NpgsCore/Sources/: Npgs.h  OldHeaderSources.7z.bak  Vertices.inc  main.cpp  main.cpp.bak  main.cpp1  main1.cpp  stdafx.h
NpgsCore/Tools/: CodeReview.py  H-R_Diagram_Fitting.py  LineCounter.py  Output.csv  Package.py  UpdatePackages.py  ValidatePdf.py  Visualization.py  恒星统计.py
NpgsCore_ModulesExperimental/: BinaryFirstStar.csv  NpgsCore_ModulesExperimental.vcxproj  NpgsCore_ModulesExperimental.vcxproj.filters
NpgsCore_ModulesExperimental/Sources/: main.cpp
NpgsMain/: NpgsMain.vcxproj  NpgsMain.vcxproj.filters
NpgsMain/Sources/: stdafx.h
NpgsTest/: NpgsTest.vcxproj  NpgsTest.vcxproj.filters
NpgsTest/Sources/: main.cpp  stdafx.h
VonNeumannProbe_inGalaxy_Simulator/: 9Gyr.txt  Mass.txt  VonNeumannProbe_inGalaxy_Simulator.vcxproj  VonNeumannProbe_inGalaxy_Simulator.vcxproj.filters  test.csv
VonNeumannProbe_inGalaxy_Simulator/Sources/: Npgs.h  main.cpp  stdafx.h
VonNeumannProbe_inGalaxy_Simulator/Tools/: H-R_Diagram_Fitting.py  III_coordinates.txt  II_coordinates.txt  IV_coordinates.txt  Ia_coordinates.txt  Ib_coordinates.txt
glad/: glad.vcxproj  glad.vcxproj.filters
glad/Sources/: glad.c
src/gui/: Cargo.toml
src/gui/src/: main.rs
src/npgs_sim/: Cargo.toml
(+2570 files in other folders)
